[FIX] gap on safari mobile

--- a/src/app/styles/components/_actionsMenus.scss
+++ b/src/app/styles/components/_actionsMenus.scss
@@ -73,6 +73,9 @@
 .hide {
   display: none;
 }
+.safari-menu {
+  margin: 10px
+}
 
 @keyframes pulse {
   0% {
